--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "contenteditable-react": "^1.3.4",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "nanoid": "^5.0.6",
